<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="134dp"
        android:layout_height="119dp"
        android:src="@drawable/logo_garderie"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garderie_name_Caption"
        android:textSize="20dp"
        android:textColor="@color/rougeBordeaux"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="200dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/loginLabel_Caption"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corner_view"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <ImageView

        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:src="@drawable/user" />

    <EditText
        android:id="@+id/idLoginUserName"
        android:layout_width="match_parent"
        android:hint="@string/loginUsername_Caption"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gris"
        android:textColor="@color/black"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="39dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:src="@drawable/lock" />

    <EditText
        android:id="@+id/idLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginPassword_Caption"
        android:inputType="textPassword"
        android:textColorHint="@color/gris"
        android:textColor="@color/black"
        />




</LinearLayout>

    <Button
        android:layout_marginTop="4dp"
        android:id="@+id/idloginconnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButton_Caption"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textSize="16dp"/>

    <TextView
        android:layout_marginTop="4dp"
        android:id="@+id/idAllerARegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allerARegister_Caption"
        android:textColor="@color/purple_700"
        android:textSize="16dp"
        android:layout_gravity="center"/>






</LinearLayout>